# FTLPU-SOFTWARE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh-CN.md
compiler/: CMakeLists.txt
compiler/docs/: compiler_architecture.md  compiler_architecture.zh-CN.md  iree_compiler_structure_study.md  iree_compiler_structure_study.zh-CN.md  iree_frontend_integration.md  iree_frontend_integration.zh-CN.md  mlir_build.md  mlir_build.zh-CN.md  smollm2_attention_pipeline.md  smollm2_attention_pipeline.zh-CN.md  smollm2_ffn_pipeline.md  smollm2_ffn_pipeline.zh-CN.md  w8a16_ffn_mtile_weight_reuse.md  w8a16_ffn_mtile_weight_reuse.zh-CN.md
compiler/examples/iree_frontend/: simple_swiglu_stablehlo.mlir
compiler/examples/smollm2_135m_attention/: attention_seq128.stablehlo.mlir
compiler/examples/smollm2_135m_ffn/: ffn.stablehlo.mlir  ffn_seq128.stablehlo.mlir
compiler/examples/targets/: default.json  exploration_40_streams.json
compiler/examples/w8a16_ffn/: ffn_128x64x128x64.stablehlo.mlir  ffn_32x64x128x64.stablehlo.mlir
compiler/include/ftlpu/compiler/: ir.hpp  passes.hpp  target_model.hpp
compiler/include/ftlpu/compiler/Dialect/Command/IR/: CommandOps.td  command_dialect.hpp
compiler/include/ftlpu/compiler/Dialect/Kernel/IR/: KernelOps.td  kernel_dialect.hpp
compiler/include/ftlpu/compiler/Pipelines/: phases.hpp  pipelines.hpp
compiler/include/ftlpu/compiler/Transforms/: passes.hpp
compiler/src/: ir.cpp  passes.cpp  target_model.cpp
compiler/src/Dialect/Command/IR/: CommandDialect.cpp
compiler/src/Dialect/Command/Transforms/: ScheduleToCommand.cpp
compiler/src/Dialect/Common/: LoweringUtils.cpp  LoweringUtils.hpp
compiler/src/Dialect/Kernel/IR/: KernelDialect.cpp
compiler/src/Dialect/Kernel/Transforms/: ComposeKernelPlans.cpp  StableHloToKernel.cpp
compiler/src/Dialect/Schedule/Analysis/: AttentionMemoryLayout.cpp  AttentionOutputProjectionStagePlanner.cpp  AttentionProjectionPlanner.cpp  AttentionProjectionStagePlanner.cpp  AttentionPvStagePlanner.cpp  AttentionRopeStagePlanner.cpp  AttentionSoftmaxPlanner.cpp  AttentionSoftmaxStagePlanner.cpp  AttentionStagePlan.cpp  AttentionWorkPlanner.cpp  FfnDownProjectionScheduleBuilder.cpp  FfnDownProjectionTimelinePlanner.cpp  FfnProjectionScheduleBuilder.cpp  FfnProjectionTimelinePlanner.cpp  FfnScheduleBuilders.cpp  FfnSchedulePlanner.cpp  FfnSwishPlanner.cpp  FfnSwishScheduleBuilder.cpp  FfnWeightLoadScheduleBuilder.cpp  LPUResourceModel.cpp  ResourceScheduler.cpp  ScheduleGraph.cpp  SchedulePlan.cpp
compiler/src/Dialect/Schedule/IR/: ScheduleDialect.cpp
compiler/src/Dialect/Schedule/Transforms/: AttentionEmitterUtils.cpp  AttentionEmitterUtils.hpp  AttentionMemoryLayout.cpp  AttentionOutputProjectionEmitter.cpp  AttentionProjectionEmitter.cpp  AttentionPvEmitter.cpp  AttentionRopeEmitter.cpp  AttentionScheduleEmitter.cpp  AttentionSoftmaxEmitter.cpp  FfnDownProjectionEmitter.cpp  FfnEmitterUtils.cpp  FfnEmitterUtils.hpp  FfnProjectionEmitter.cpp  FfnScheduleEmitter.cpp  FfnStageEmitter.cpp  FfnStageEmitter.hpp  FfnSwishEmitter.cpp  FfnSwishStageEmitter.cpp  FfnWeightLoadEmitter.cpp  MatmulScheduleEmitter.cpp  ScheduleEmitterUtils.cpp  ScheduleEmitterUtils.hpp  StreamToSchedule.cpp  SwigluScheduleEmitter.cpp  VerifySchedule.cpp
compiler/src/Dialect/Stream/Analysis/: StreamAllocator.cpp
compiler/src/Dialect/Stream/IR/: StreamDialect.cpp
compiler/src/Dialect/Stream/Transforms/: TensorToStream.cpp
compiler/src/Dialect/Tensor/Analysis/: MemoryLayout.cpp  PhysicalMemoryAllocator.cpp
compiler/src/Dialect/Tensor/IR/: TensorDialect.cpp
compiler/src/Dialect/Tensor/Transforms/: KernelToTensor.cpp
compiler/src/Pipelines/: Phases.cpp  Pipelines.cpp
compiler/tests/: attention_projection_planner_test.cpp  attention_rope_emitter_test.cpp  attention_stage_plan_test.cpp  attention_target_layout_test.cpp  attention_work_planner_test.cpp  command_vxm_binary_runtime_test.py  ffn_schedule_builders_test.cpp  ffn_swish_emitter_test.cpp  generic_w8a16_ffn_ir_test.py  onnx_matmul_320_to_iree_ir_test.py  physical_memory_allocator_test.cpp  schedule_graph_test.cpp  schedule_plan_test.cpp  schedule_resource_dependency_mlir_test.py  schedule_verifier_test.py  smollm2_135m_attention_kernel_ir_test.py  smollm2_135m_attention_schedule_ir_test.py  smollm2_135m_attention_tensor_ir_test.py  smollm2_135m_ffn_binary_runtime_test.py  smollm2_135m_ffn_ir_test.py  smollm2_attention_projection_binary_runtime_test.py  smollm2_attention_softmax_binary_runtime_test.py  stablehlo_matmul_cpp_pass_test.py  stablehlo_matmul_lowering_test.py  stablehlo_matmul_mlir_test.py  stablehlo_matmul_stream_mlir_test.py  stablehlo_matmul_tensor_mlir_test.py  stablehlo_swiglu_cpp_pass_test.py  stream_allocator_reuse_mlir_test.py  target_configuration_test.py  tensor_lifetime_reuse_mlir_test.py  w8a16_ffn_mtile_weight_reuse_test.py
compiler/tests/Inputs/: command_vxm.mlir  kernel_matmul_lifetime.mlir  schedule_resource_overlap.mlir
compiler/tools/: ftlpu-lower.py  ftlpu_opt.cpp  ftlpu_translate.cpp  render_attention_pipeline.py  render_ffn_pipeline.py
runtime/: CMakeLists.txt
runtime/docs/: low_level_ir_runtime_design.md  low_level_ir_runtime_design.zh-CN.md
runtime/examples/: simple_dispatch.lpuir
runtime/include/ftlpu/software/runtime/: binary.hpp  cmodel_link.hpp  cmodel_runtime.hpp  icu_program.hpp  lpu_ir.hpp  performance.hpp  schedule_trace.hpp  target_abi.hpp
runtime/src/cmodel/: cmodel_static.cpp
runtime/src/runtime/: binary.cpp  cmodel_runtime.cpp  icu_program.cpp  lpu_ir.cpp  performance.cpp  schedule_trace.cpp
runtime/tests/runtime/: cmodel_gemm_320_runtime_test.cpp  cmodel_static_runtime_link_test.cpp  cmodel_swiglu_runtime_test.cpp  command_vxm_binary_runtime_test.cpp  compiled_queue_program_runtime_test.cpp  compiled_smollm2_135m_ffn_runtime_test.cpp  compiled_smollm2_attention_projection_runtime_test.cpp  compiled_smollm2_attention_softmax_runtime_test.cpp  compiled_sxm_command_runtime_test.cpp  icu_program_smoke_test.cpp  lpu_ir_binary_runtime_test.cpp  sxm_binary_roundtrip_test.cpp
tools/: ftlpu-iree-import.py  (+2 more)
(+36 files in other folders)
